@startuml

title __ACTIONS's Class Diagram__\n

  namespace model {
    namespace actors.actions {
      class model.actors.actions.ActionArguments {
          + ActionArguments()
          + getArg1()
          + getArg2()
          + getArg3()
          + setArg1()
          + setArg2()
          + setArg3()
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      interface model.actors.actions.Actions {
          {abstract} + getAvailableActions()
          {abstract} + resetActions()
          {abstract} + updateActions()
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      abstract class model.actors.actions.ActionsManager {
          # availableActions : Set<Action>
          + getAvailableActions()
          + resetActions()
          + updateActions()
          # ActionsManager()
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      enum Action {
        ADD_ANIMAL
        BUY_ITEM
        FEED_ALL_ANIMALS
        FEED_ANIMAL
        FERTILIZE
        FERTILIZE_ALL
        GET_ALL_RESOURCES
        GET_RESOURCES
        GIVE_WATER
        GIVE_WATER_ALL
        HARVEST
        HARVEST_ALL
        MOVE_ITEM
        PLANT
        PLANT_ALL
        PLOW
        PLOW_ALL
        REMOVE_ANIMAL
        SELL_ITEM
        WATER
        WATER_ALL
        itemValidator
        landValidator
        name
        optional
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      interface model.actors.actions.ActionsManager.DualItemValidator {
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      interface model.actors.actions.ActionsManager.ItemTypeValidator {
          {abstract} + validateItemType()
      }
    }
  }
  

  namespace model {
    namespace actors.actions {
      interface model.actors.actions.ActionsManager.LandAbstractValidator {
          {abstract} + validateLandAbstract()
      }
    }
  }
  

  model.actors.actions.ActionArguments o-- T1 : arg1
  model.actors.actions.ActionArguments o-- T2 : arg2
  model.actors.actions.ActionArguments o-- T3 : arg3
  model.actors.actions.ActionsManager .up.|> Actions
  model.actors.actions.ActionsManager +-down- model.actors.actions.ActionsManager.Action
  model.actors.actions.ActionsManager +-down- model.actors.actions.ActionsManager.DualItemValidator
  model.actors.actions.ActionsManager +-down- model.actors.actions.ActionsManager.ItemTypeValidator
  model.actors.actions.ActionsManager +-down- model.actors.actions.ActionsManager.LandAbstractValidator
  model.actors.actions.ActionsManager.Action o-- model.actors.actions.ActionsManager.ItemTypeValidator : itemValidator
  model.actors.actions.ActionsManager.Action o-- model.actors.actions.ActionsManager.LandAbstractValidator : landValidator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
